541-request-routing/5413-method/istio-api/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: details-method
spec:
  hosts:
    - details
  http:
    - match:
        - method:
            exact: "POST"
      route:
        - destination:
            host: reviews
            subset: v2
    - route:
        - destination:
            host: reviews
            subset: v1
